# cw

./: .gitignore  dev.txt  integrator.py  main.py  pyproject.toml  requirements.txt
static/: LOGO_RECIPE_TEMPLATE.xlsx  all-recipe - Copy.XML  xml-template.xlsx
